# Open-Wall-e

./: .gitmodules
Raspberry/Codigo/Vision/Face_tracking_PC/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/01-FaceTracking/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/01-FaceTracking/Resources/: Resources.h  csvFileDIrectory.txt  faces.csv
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/01-FaceTracking/src/: Librerias_Reconocimiento.cpp  Utilities.cpp
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/02-FaceTracking_LoadModel/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/02-FaceTracking_LoadModel/src/: FaceTracking_LoadModel.cpp  Utilities.h
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/02-FaceTracking_SaveModel/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/02-FaceTracking_SaveModel/src/: FaceTracking_SaveModel.cpp  Libreria_SaveLoadModel.cpp  Librerias_Reconocimiento.cpp
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/Resources/: Defines.h
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/buil/: CMakeCache.txt  FaceTracking  Makefile  cmake_install.cmake
Raspberry/Codigo/Vision/Face_tracking_PC/CMake/src/: FaceTracking.cpp  Librerias_Reconocimiento.h  libreria_Detection.cpp
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/.metadata/.plugins/org.eclipse.cdt.core/: FaceTracking.1465725439618.pdom  language.settings.xml
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/.metadata/.plugins/org.eclipse.core.resources/: .snap
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/: .cproject  .project
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/ArchivosEntrada/: medidas.txt
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/Debug/: 02-FaceTracking_LoadModel  makefile
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/Debug/Resources/: Resources.d  subdir.mk
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/Debug/src/: FaceTracking_LoadModel.d  Libreria_SaveLoadModel.d  libreria_Detection.d  subdir.mk
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/Resources/: Defines.h  Resources.cpp
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/02-FaceTracking_LoadModel/src/: FaceTracking_LoadModel.cpp  Libreria_SaveLoadModel.h  Librerias_Reconocimiento.h  libreria_Detection.cpp
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/FaceTracking/: .cproject  .project
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/FaceTracking/Debug/: 01-FaceTracking  FaceTracking  faces.csv  makefile  objects.mk  sources.mk
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/FaceTracking/Debug/src/: FaceTracking.d  Librerias_Reconocimiento.d  Utilities.d  (+2 more)
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/FaceTracking/src/: FaceTracking.cpp  Librerias_Reconocimiento.cpp  Librerias_Reconocimiento.h  Utilities.cpp  Utilities.h  libreria_Detection.cpp  libreria_Detection.h
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/FaceTracking_SaveModel/: .cproject  .project
Raspberry/Codigo/Vision/Face_tracking_PC/Eclipse/FaceTracking_SaveModel/Debug/: FaceTracking_SaveModel  makefile
Raspberry/Codigo/Vision/Face_tracking_PC/buil/: CMakeCache.txt  Makefile  cmake_install.cmake
Raspberry/Codigo/Vision/Face_tracking_Raspberry/: .gitignore  CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_Raspberry/01-FaceTracking/Resources/: Defines.h  faces.csv
Raspberry/Codigo/Vision/Face_tracking_Raspberry/01-FaceTracking/Resources/Gender_Photos_DataBase/: Gender.csv
Raspberry/Codigo/Vision/Face_tracking_Raspberry/02-FaceTrackin_SaveModel/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_Raspberry/02-FaceTrackin_SaveModel/ArchivosSalida/: people.txt
Raspberry/Codigo/Vision/Face_tracking_Raspberry/02-FaceTrackin_SaveModel/Resources/: Resources.cpp  Resources.h
Raspberry/Codigo/Vision/Face_tracking_Raspberry/02-FaceTracking_LoadModel/: CMakeLists.txt
Raspberry/Codigo/Vision/Face_tracking_Raspberry/02-FaceTracking_LoadModel/Resources/: Resources.cpp
Raspberry/Codigo/Vision/Face_tracking_Raspberry/02-FaceTracking_LoadModel/Resources/raspicam/: typedef.h
Raspberry/Codigo/Vision/Face_tracking_Raspberry/Resources/: Defines.h  Resources.cpp
Raspberry/Codigo/Vision/Face_tracking_Raspberry/src/: FaceTracking.cpp  Utilities.h
Raspberry/Codigo/Voz/Pocketsphinx_PC/Hello_world_CMake/: CMakeCache.txt  CMakeLists.txt  Hello_world.cpp  Makefile  cmake_install.cmake  hello_ps  hello_ps.c
(+378 files in other folders)
